# Covid19-Simulator

./: .gitignore  Cargo.toml
dataset/: COVID-19_rioolwaterdata.json  provinces.json
src/: float_helper.rs  main.rs  utility.rs
src/data_structures/: graph.rs  mod.rs  params.rs
