[package]
name = "covid-19_simulator"
version = "0.1.0"
authors = ["HindrikStegenga <Hindrik1997@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = { version = "1.0.57" }
plotters = "0.3.0"
chrono = "0.4.18"